# page-counter-wasm

./: .gitignore  Cargo.toml  QUICK-START.md  README-PDFJS.md  README.md  counter-local.js  demo-pdfjs.html  example-node.mjs  index.html  package.json  pdfjs_bridge.js  test-basic.html  wasm.html
.github/workflows/: release.yml
src/: assembly.rs  estimators.rs  fast_pdf.rs  file_utils.rs  lib.rs  pdfjs_bindings.rs  schema.rs  simple_pdf.rs  size_utils.rs  ultra_fast_pdf.rs
views/: counter.js  wasm.html
