[package]
name = "page-counter-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[dependencies]
calamine = "0.31.0"
lopdf = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
wasm-bindgen = "0.2.104"
base64 = "0.22"
